<resources>
    <string name="app_name">BAAssetsDownloader</string>
    <string name="continueDot">Continue…</string>
    <string name="welcomeUse">welcome to use</string>
    <string name="packageName">"package name: "</string>
    <string name="serverName">"server name: "</string>
    <string name="packageStatus">package status:</string>
    <string name="notFound">not found</string>
    <string name="found">found</string>
    <string name="localVersionName">"local version name: "</string>
    <string name="localVersionCode">"local version code: "</string>
    <string name="moreInfo">more info</string>
    <string name="lessInfo">less info</string>
    <string name="jpServer">jp server</string>
    <string name="globalServer">global server</string>
    <string name="homePage">home page</string>
    <string name="settings">Settings</string>
    <string name="error">Error</string>
    <string name="download">Download</string>
    <string name="gotoDownload">goto download</string>
    <string name="nowSelect">now select:</string>
    <string name="getInfo">get info</string>
    <string name="pressAgainExit">Press again to exit</string>
    <string name="notSelect">not select</string>
    <string name="gotoDownloadPage">goto download page</string>
    <string name="loadProgress">load progress</string>
    <string name="loading">loading…</string>
    <string name="flash">flash</string>
    <string name="serverVersionName">"server version name: "</string>
    <string name="serverVersionCode">"server version code: "</string>
    <string name="notFoundServerVersion">not found server version</string>
    <string name="apkNotSameServerVersion">not same server version, please update apk</string>
    <string name="apkSameServerVersion">same server version, not to update</string>
    <string name="getError">get error</string>
    <string name="getSuccess">get success</string>
    <string name="TODO">this TODO</string>
    <string name="downloadSuccess">download finish</string>
    <string name="installApk">install apk</string>
    <string name="installObb">install obb data</string>
    <string name="obbNotSameServerVersion">obb bot same server version, please update obb</string>
    <string name="obbSameServerVersion">obb same server version, not to update</string>
    <string name="getAllPermissions">already get all permissions</string>
    <string name="notGetAllPermissions">not already get all permissions\nplease enter \"Continue…\" to grant authorization\nor enter \"Force Continue\"</string>
    <string name="forceContinue">force continue</string>
    <string name="forAndroid11HelloWindow">NO ENGLISH, USE CHINESE NOW!</string>
    <string name="forAndroid11DownloadAssets">NO ENGLISH, USE CHINESE NOW!</string>
    <string name="installAssets">download assets</string>
    <string name="noStoragePermission">NO ENGLISH, USE CHINESE NOW!</string>
    <string name="showThisWindow">Show This Window</string>
    <string name="customApiUrl">custom API</string>
    <string name="typeApiUrl">type API url</string>
    <string name="defaultApiUrl">default API</string>

    <string name="defaultApiUrlLink" translatable="false">"https://assets.schale.top/"</string>
    <string name="selectApiUrl">select API</string>
    <string name="quit">quit</string>
    <string name="enter">enter</string>
    <string name="notShowAgainEnter">not show again</string>
    <string name="helloMessage">NO ENGLISH, USE CHINESE NOW!</string>
    <string name="downloadApkObbStart">application download start, checking update</string>
    <string name="downloadApkProgress">apk download progress</string>
    <string name="downloadObbProgress">obb download progress</string>
    <string name="downloadHelpGlobal">NO ENGLISH, USE CHINESE NOW!</string>
    <string name="downloadHelpJp">NO ENGLISH, USE CHINESE NOW!</string>
    <string name="downloadHelp">NO ENGLISH, USE CHINESE NOW!</string>
    <string name="help">help</string>
    <string name="checkUpdate">check update</string>
    <string name="selectFileDir">select dir</string>
    <string name="noStoragePermission11">NO ENGLISH, USE CHINESE NOW!</string>
    <string name="openGame">open game</string>
    <string name="notFoundLocalApk">NO ENGLISH, USE CHINESE NOW!</string>
    <string name="waringWithoutObbDir">NO ENGLISH, USE CHINESE NOW!</string>
    <string name="downloadAndInstallApk">download and install apk</string>
    <string name="notInstallApk">not install apk</string>
    <string name="downloadApkNoNeed">download apk no need</string>
    <string name="downloadObbNoNeed">download obb no need</string>
    <string name="obbNotSameServerVersionWithoutPermission">obbNotSameServerVersionWithoutPermission</string>
    <string name="askMeOneDayLater">ask me one day later</string>
    <string name="versionUpdateDialogTitle">new version available</string>
    <string name="changelog">Changelog</string>
    <string name="getting">getting</string>
    <string name="downloadBundlesStart">assets download start, checking update</string>
    <string name="noStoragePermissionBundles">NO ENGLISH, USE CHINESE NOW!</string>
    <string name="downloadNotificationContent">%s download progress %d/%d fail: %d</string>
    <string name="downloadNotificationChannelName">show download progress</string>
    <string name="downloadNotificationChannelDesc">show download progress</string>
    <string name="downloadNotificationFinish">%s download finish</string>
    <string name="getAssets">get assets info</string>
    <string name="assetsDownloadInfo">progress: %d/%d thread: %d/%d</string>
    <string name="getAssetsNum">already assets num: %d</string>
    <string name="downloadError">download fail\n%s</string>
    <string name="notNumberWarn">only support number</string>
    <string name="threadNumber">thread number</string>
    <string name="checkingUpdate">checking update</string>
    <string name="downloadStart">download start</string>
    <string name="selectServerType">select server type</string>
    <string name="cnServer">cn server</string>
    <string name="selectAmbiguity">select ambiguity</string>
    <string name="selectTransparency">select transparency</string>
    <string name="widgetConfigNotice">"NOTICE: all config only "</string>
    <string name="gachaPoolInfo">gacha pool info</string>
    <string name="activityInfo">activity info</string>
    <string name="flushTime">flush time</string>
    <string name="lestTime">lest %s</string>
    <string name="lestTimeDay">lest %s day</string>
    <string name="lestTimeHour">lest %s hour</string>
    <string name="widgetFlushing">updating</string>
    <string name="widgetFlushTime">%s updated</string>
    <string name="downloadNotificationTitle">download progress</string>
    <string name="noPermissionError">get permission error</string>
    <string name="downloadProgress">download progress\napk: %1$.2f%% %2$s</string>
    <string name="downloadCancel">download cancel</string>
    <string name="assetsNotAlready">in updating, assets not download</string>
    <string name="currentActivityEvent">"Current Activity Event"</string>
</resources>